@@ -1,4 +1,10 @@
 2006-08-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* include/Partition.h,
+	  src/Partition.cc: added get_sector()
+	* src/GParted_Core.cc: use new Partition::get_sector()
+
+2006-08-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/Dialog_Partition_Copy.cc,
 	  src/GParted_Core.cc,
